# GTI_3B_Proyecto_Turtlebot3

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
proy_techcommit/: CMakeLists.txt  package.xml
proy_techcommit_action_move/: package.xml  setup.cfg  setup.py
proy_techcommit_action_move/launch/: action_client.launch.py  action_server.launch.py
proy_techcommit_action_move/proy_techcommit_action_move/: action_client.py  action_server.py
proy_techcommit_custom_interface/: CMakeLists.txt  package.xml
proy_techcommit_custom_interface/action/: Move.action
proy_techcommit_custom_interface/srv/: MyMovimientoRobot.srv
proy_techcommit_modelo_reconocimiento/: package.xml  setup.cfg  setup.py
proy_techcommit_modelo_reconocimiento/launch/: modelo_reconocimiento.launch.py
proy_techcommit_mundo/: CMakeLists.txt  package.xml
proy_techcommit_mundo/launch/: turtlebot3_proy_techcommit.launch.py
proy_techcommit_mundo/world/: hospital.world
proy_techcommit_my_nav2_system/: package.xml  setup.cfg  setup.py
proy_techcommit_my_nav2_system/config/: my_map.yaml  my_nav2_params.yaml  my_slam.rviz
proy_techcommit_my_nav2_system_real/: package.xml  setup.cfg  setup.py
proy_techcommit_my_slam/: setup.cfg  setup.py
proy_techcommit_provide_map/: package.xml  setup.cfg  setup.py
proy_techcommit_provide_map_real/: package.xml  setup.cfg  setup.py
proy_techcommit_service_move/: package.xml  setup.cfg  setup.py
robot_real_bringup/: package.xml  setup.cfg  setup.py
simulation_nav_bringup/: package.xml  setup.cfg  setup.py
(+39 files in other folders)
